// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBagItem should render in error state 1`] = `
<div>
  <span
    data-test="bagItem-error"
  >
    An unexpected error occurred
  </span>
</div>
`;

exports[`useBagItem should render in loading state 1`] = `
<div>
  <span
    data-test="bagItem-loading"
  >
    yes
  </span>
</div>
`;
